--- a/gym-camp/gym-management-system/src/main/resources/application.properties
+++ b/gym-camp/gym-management-system/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=malek
 spring.datasource.password=0000
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
+spring.mvc.hiddenmethod.filter.enabled=true
