--- a/gym-camp/gym-management-system/build.gradle
+++ b/gym-camp/gym-management-system/build.gradle
@@ -13,12 +13,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.3'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.3'
-	runtimeOnly 'org.postgresql:postgresql:42.3.2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.4'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.4'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.5'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.4'
+	runtimeOnly 'org.postgresql:postgresql:42.3.3'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.4'
 }
 
 tasks.named('test') {
