--- a/gym-camp/gym-management-system/build.gradle
+++ b/gym-camp/gym-management-system/build.gradle
@@ -16,8 +16,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.4'
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.5'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
+	// https://mavenlibs.com/maven/dependency/org.hibernate/hibernate-entitymanager
+	implementation 'org.hibernate:hibernate-entitymanager:5.6.8.Final'
+//	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.5'
+//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.4'
 	runtimeOnly 'org.postgresql:postgresql:42.3.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.4'
